Corrected footer error where words would overflow to the next line

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ footer nav {
 footer nav ul {
     padding-top: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 3fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1.5fr 3fr 1fr 1fr 1fr;
     justify-content: space-around;
 }
 
